fix cut off tooltips

--- a/src/css/tooltips.scss
+++ b/src/css/tooltips.scss
@@ -20,7 +20,7 @@
   padding: .5rem .8rem;
   width: 250px;
   left: 17rem;
-  bottom: 3rem;
+  bottom: -0.8rem;
   display: none;
 }
 
